# duckdb-ui

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: MainDistributionPipeline.yml  _extension_distribution.yml
src/: http_server.cpp  settings.cpp  state.cpp  ui_extension.cpp  watcher.cpp
src/include/: http_server.hpp  settings.hpp
src/include/utils/: helpers.hpp  token.hpp
src/utils/: token.cpp
test-ssl/: CMakeLists.txt  test_ssl.cc
test/integration/: package-lock.json  package.json  token_auth.test.ts  tsconfig.json
test/integration/helpers/: DuckDBServer.ts
test/sql/: ui.test
ts/: package.json  pnpm-lock.yaml
ts/pkgs/duckdb-data-reader/: package.json
ts/pkgs/duckdb-data-types/: package.json
ts/pkgs/duckdb-data-types/src/: DuckDBType.ts  DuckDBTypeId.ts  parseLogicalTypeString.ts
ts/pkgs/duckdb-data-types/test/: DuckDBType.test.ts  parseLogicalTypeString.test.ts
ts/pkgs/duckdb-data-values/: package.json
ts/pkgs/duckdb-data-values/src/: DuckDBTimestampTZValue.ts  DuckDBToStringOptions.ts  index.ts
ts/pkgs/duckdb-data-values/src/conversion/: dateTimeStringConversion.ts  getBigNumFromBytes.ts
ts/pkgs/duckdb-data-values/test/: DuckDBTimestampTZValue.test.ts
ts/pkgs/duckdb-data-values/test/conversion/: getBigNumFromBytes.test.ts
ts/pkgs/duckdb-ui-client/: package.json
ts/pkgs/duckdb-ui-client/src/conversion/functions/: duckDBTypeFromTypeIdAndInfo.ts  duckDBValueFromVector.ts
ts/pkgs/duckdb-ui-client/src/serialization/constants/: LogicalTypeId.ts
ts/pkgs/duckdb-ui-client/src/serialization/functions/: vectorReaders.ts
